fix for vim/nvim

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,7 @@
 set -g mouse on
-#set-option -sa terminal-overrides ",xterm*:Tc"
+#set -g default-terminal "xterm-256color-italic"
+set-option -g default-shell /bin/zsh
 set -g default-terminal "screen-256color"
-#set -g window-style 'bg=colour232123'
 
 
 # Use Alt-arrow keys without prefix key to switch panes
