--- a/tmux.conf
+++ b/tmux.conf
@@ -3,6 +3,7 @@ set -g mouse on
 set-option -g default-shell /bin/zsh
 set -g default-terminal "screen-256color"
 set -g pane-base-index 1
+set -g escape-time 10
 
 # Use Alt-arrow keys without prefix key to switch panes
 bind -n M-h select-pane -L
