--- a/tmux.conf
+++ b/tmux.conf
@@ -28,3 +28,8 @@ bind -n S-Right next-window
 
 bind -n C-PageUp  previous-window
 bind -n C-PageDown next-window
+
+bind h resize-pane -L 30
+bind l resize-pane -R 30
+bind k resize-pane -U 30
+bind j resize-pane -D 30
