add fira code for all font faces and VisIncr vim plugin

--- a/alacritty.yml
+++ b/alacritty.yml
@@ -67,13 +67,13 @@ font:
 
   # The bold font face
   bold:
-    family: monospace # should be "Menlo" or something on macOS.
+    family: "Fira Code" # should be "Menlo" or something on macOS.
     # Style can be specified to pick a specific face.
     # style: Bold
 
   # The italic font face
   italic:
-    family: monospace # should be "Menlo" or something on macOS.
+    family: "Fira Code" # should be "Menlo" or something on macOS.
     # Style can be specified to pick a specific face.
     # style: Italic
 
