fix tilde mapping

--- a/alacritty.yml
+++ b/alacritty.yml
@@ -78,7 +78,7 @@ font:
     # style: Italic
 
   # Point size of the font
-  size: 9
+  size: 12
 
   # Offset is the extra space around each character. offset.y can be thought of
   # as modifying the linespacing, and offset.x as modifying the letter spacing.
@@ -417,7 +417,7 @@ key_bindings:
   - { key: F12,      mods: Super,   chars: "\x1b[24;3~"                  }
 
     # macOS spanish keyboard bindings
-  - { key: Semicolon,     mods: Alt,      chars: "~"                    }
+  #- { key: Semicolon,     mods: Alt,      chars: "~"                    }
   - { key: Key1,          mods: Alt,      chars: "|"                    }
   - { key: Key2,          mods: Alt,      chars: "@"                    }
   - { key: Key3,          mods: Alt,      chars: "#"                    }
