add vim tables plugin and fix tmux bindings

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,4 @@
 set -g mouse on
-#set -g default-terminal "xterm-256color-italic"
 set-option -g default-shell /bin/zsh
 set -g default-terminal "screen-256color"
 set -g pane-base-index 1
@@ -11,8 +10,8 @@ bind -n M-l select-pane -R
 bind -n M-k select-pane -U
 bind -n M-j select-pane -D
 
-bind d split-window -v -c '#{pane_current_path}'
-bind r split-window -h -c '#{pane_current_path}'
+#bind b split-window -v -c '#{pane_current_path}'
+#bind r split-window -h -c '#{pane_current_path}'
 
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
