--- a/tmux.conf
+++ b/tmux.conf
@@ -10,8 +10,8 @@ bind -n M-l select-pane -R
 bind -n M-k select-pane -U
 bind -n M-j select-pane -D
 
-#bind b split-window -v -c '#{pane_current_path}'
-#bind r split-window -h -c '#{pane_current_path}'
+bind '"' split-window -v -c '#{pane_current_path}'
+bind '%' split-window -h -c '#{pane_current_path}'
 
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
