--- a/tmux.conf
+++ b/tmux.conf
@@ -1,8 +1,17 @@
 set -g mouse on
 set-option -g default-shell /bin/zsh
-set -g default-terminal "screen-256color"
+#set -g default-terminal "screen-256color"
 set -g pane-base-index 1
 set -g escape-time 10
+
+set -as terminal-overrides ',xterm*:sitm=\E[3m'
+set -g terminal-overrides ',xterm-256color:Tc'
+set -g default-terminal "screen-256color"
+
+
+# enable true color support and italics
+set -g default-terminal "xterm-256color-italic"
+#set -ga terminal-overrides ",xterm-256color-italic:Tc"
 
 # Use Alt-arrow keys without prefix key to switch panes
 bind -n M-h select-pane -L
