--- a/tmux.conf
+++ b/tmux.conf
@@ -10,7 +10,7 @@ set -g default-terminal "screen-256color"
 
 
 # enable true color support and italics
-set -g default-terminal "xterm-256color-italic"
+#set -g default-terminal "xterm-256color-italic"
 #set -ga terminal-overrides ",xterm-256color-italic:Tc"
 
 # Use Alt-arrow keys without prefix key to switch panes
