repeat last command command

--- a/tmux.conf
+++ b/tmux.conf
@@ -43,3 +43,7 @@ bind h resize-pane -L 30
 bind l resize-pane -R 30
 bind k resize-pane -U 30
 bind j resize-pane -D 30
+
+
+# Repeat last command in pane 2
+bind r send-keys -t 2 C-c Up Enter
