--- a/alacritty.yml
+++ b/alacritty.yml
@@ -22,6 +22,10 @@ window:
     columns: 80
     lines: 24
 
+  dpi:
+      x: 96.0
+      y: 96.0
+
   # Adds this many blank pixels of padding around the window
   # Units are physical pixels; this is not DPI aware.
   # (change requires restart)
@@ -39,6 +43,7 @@ tabspaces: 8
 # When true, bold text is drawn using the bright variant of colors.
 draw_bold_text_with_bright_colors: true
 
+antialias: true
 # Font configuration (changes require restart)
 #
 # Important font attributes like antialiasing, subpixel aa, and hinting can be
@@ -59,44 +64,33 @@ draw_bold_text_with_bright_colors: true
 # * https://wiki.archlinux.org/index.php/font_configuration#Fontconfig_configuration
 # * file:///usr/share/doc/fontconfig/fontconfig-user.html
 font:
-  # The normal (roman) font face to use.
   normal:
-    family: "Fira Code" # should be "Menlo" or something on macOS.
-    # Style can be specified to pick a specific face.
-    style: Regular
+    family: Menlo # should be "Menlo" or something on macOS.
+    #style: Light
 
-  # The bold font face
   bold:
-    family: "Fira Code" # should be "Menlo" or something on macOS.
-    # Style can be specified to pick a specific face.
-    # style: Bold
+    family: Menlo # should be "Menlo" or something on macOS.
+  #  style: Bold
 
-  # The italic font face
   italic:
-    family: "Fira Code" # should be "Menlo" or something on macOS.
-    # Style can be specified to pick a specific face.
-    # style: Italic
+    family: Menlo # should be "Menlo" or something on macOS.
+    #style: Italic
 
-  # Point size of the font
   size: 12
 
-  # Offset is the extra space around each character. offset.y can be thought of
-  # as modifying the linespacing, and offset.x as modifying the letter spacing.
   offset:
-    x: 0.0
-    y: 0.0
+    x: 0
+    y: 0
 
-  # Glyph offset determines the locations of the glyphs within their cells with
-  # the default being at the bottom. Increase the x offset to move the glyph to
-  # the right, increase the y offset to move the glyph upward.
   glyph_offset:
-    x: 0.0
-    y: 0.0
+    x: 0
+    y: 0
 
   # OS X only: use thin stroke font rendering. Thin strokes are suitable
   # for retina displays, but for non-retina you probably want this set to
   # false.
-  use_thin_strokes: true
+  use_thin_strokes: false
+  scale_with_dpi: true
 
 # Should display the render timer
 render_timer: false
@@ -105,79 +99,37 @@ render_timer: false
 # and cursor.background colors, otherwise invert the colors of the cursor.
 custom_cursor_colors: false
 
-# Colors (Tomorrow Night Bright)
+# Colors (Gruvbox dark)
 colors:
   # Default colors
   primary:
-    background: '0x000000'
-    foreground: '0xeaeaea'
-
-  # Colors the cursor will use if `custom_cursor_colors` is true
-  cursor:
-    text: '0x000000'
-    cursor: '0xffffff'
+    # hard contrast: background = '0x1d2021'
+    background: '0x282828'
+    # soft contrast: background = '0x32302f'
+    foreground: '0xebdbb2'
 
   # Normal colors
   normal:
-    black:   '0x000000'
-    red:     '0xd54e53'
-    green:   '0xb9ca4a'
-    yellow:  '0xe6c547'
-    blue:    '0x7aa6da'
-    magenta: '0xc397d8'
-    cyan:    '0x70c0ba'
-    white:   '0xffffff'
+    black:   '0x282828'
+    red:     '0xcc241d'
+    green:   '0x98971a'
+    yellow:  '0xd79921'
+    blue:    '0x458588'
+    magenta: '0xb16286'
+    cyan:    '0x689d6a'
+    white:   '0xa89984'
 
   # Bright colors
   bright:
-    black:   '0x666666'
-    red:     '0xff3334'
-    green:   '0x9ec400'
-    yellow:  '0xe7c547'
-    blue:    '0x7aa6da'
-    magenta: '0xb77ee0'
-    cyan:    '0x54ced6'
-    white:   '0xffffff'
+    black:   '0x928374'
+    red:     '0xfb4934'
+    green:   '0xb8bb26'
+    yellow:  '0xfabd2f'
+    blue:    '0x83a598'
+    magenta: '0xd3869b'
+    cyan:    '0x8ec07c'
+    white:   '0xebdbb2'
 
-  # Dim colors (Optional)
-  dim:
-    black:   '0x333333'
-    red:     '0xf2777a'
-    green:   '0x99cc99'
-    yellow:  '0xffcc66'
-    blue:    '0x6699cc'
-    magenta: '0xcc99cc'
-    cyan:    '0x66cccc'
-    white:   '0xdddddd'
-
-## Colors (Dracula)
-#colors:
-#  # Default colors
-#  primary:
-#    background: '0x282a36'
-#    foreground: '0xf8f8f2'
-
-#  # Normal colors
-#  normal:
-#    black:   '0x000000'
-#    red:     '0xff5555'
-#    green:   '0x50fa7b'
-#    yellow:  '0xf1fa8c'
-#    blue:    '0xcaa9fa'
-#    magenta: '0xff79c6'
-#    cyan:    '0x8be9fd'
-#    white:   '0xbfbfbf'
-
-#  # Bright colors
-#  bright:
-#    black:   '0x282a35'
-#    red:     '0xff6e67'
-#    green:   '0x5af78e'
-#    yellow:  '0xf4f99d'
-#    blue:    '0xcaa9fa'
-#    magenta: '0xff92d0'
-#    cyan:    '0x9aedfe'
-#    white:   '0xe6e6e6'
 ## Visual Bell
 #
 # Any time the BEL code is received, Alacritty "rings" the visual bell. Once
@@ -311,6 +263,7 @@ live_config_reload: true
 # Want to add a binding (e.g. "PageUp") but are unsure what the X sequence
 # (e.g. "\x1b[5~") is? Open another terminal (like xterm) without tmux,
 # then run `showkey -a` to get the sequence associated to a key combination.
+
 key_bindings:
   - { key: V,        mods: Command,    action: Paste               }
   - { key: C,        mods: Command,    action: Copy                }
