fix default-terminal issue

--- a/tmux.conf
+++ b/tmux.conf
@@ -7,12 +7,12 @@ set -g escape-time 10
 
 set -as terminal-overrides ',xterm*:sitm=\E[3m'
 set -g terminal-overrides ',xterm-256color:Tc' # THIS LINE FIXES ISSUES WITH VIM COLORSCHEMES
-set -g default-terminal "screen-256color"
+# set -g default-terminal "screen-256color"
 
 
 # enable true color support and italics
 #set -g default-terminal "xterm-256color-italic"
-#set -g default-terminal "xterm-256color"
+set -g default-terminal "xterm-256color"
 #set -ga terminal-overrides ",xterm-256color-italic:Tc"
 
 # Use Alt-arrow keys without prefix key to switch panes
