--- a/alacritty.yml
+++ b/alacritty.yml
@@ -99,71 +99,71 @@ render_timer: false
 # and cursor.background colors, otherwise invert the colors of the cursor.
 custom_cursor_colors: false
 
-# # Colors (Gruvbox dark)
-# colors:
-#   # Default colors
-#   primary:
-#     # hard contrast: background = '0x1d2021'
-#     background: '0x282828'
-#     # soft contrast: background = '0x32302f'
-#     foreground: '0xebdbb2'
-
-#   # Normal colors
-#   normal:
-#     black:   '0x282828'
-#     red:     '0xcc241d'
-#     green:   '0x98971a'
-#     yellow:  '0xd79921'
-#     blue:    '0x458588'
-#     magenta: '0xb16286'
-#     cyan:    '0x689d6a'
-#     white:   '0xa89984'
-
-#   # Bright colors
-#   bright:
-#     black:   '0x928374'
-#     red:     '0xfb4934'
-#     green:   '0xb8bb26'
-#     yellow:  '0xfabd2f'
-#     blue:    '0x83a598'
-#     magenta: '0xd3869b'
-#     cyan:    '0x8ec07c'
-#     white:   '0xebdbb2'
-
-# Base16 Atelier Dune 256 - alacritty color config
-# Bram de Haan (http://atelierbramdehaan.nl)
+# Colors (Gruvbox dark)
 colors:
   # Default colors
   primary:
-    background: '0x20201d'
-    foreground: '0xa6a28c'
-
-  # Colors the cursor will use if `custom_cursor_colors` is true
-  cursor:
-    text: '0x20201d'
-    cursor: '0xa6a28c'
+    # hard contrast: background = '0x1d2021'
+    background: '0x282828'
+    # soft contrast: background = '0x32302f'
+    foreground: '0xebdbb2'
 
   # Normal colors
   normal:
-    black:   '0x20201d'
-    red:     '0xd73737'
-    green:   '0x60ac39'
-    yellow:  '0xae9513'
-    blue:    '0x6684e1'
-    magenta: '0xb854d4'
-    cyan:    '0x1fad83'
-    white:   '0xa6a28c'
+    black:   '0x282828'
+    red:     '0xcc241d'
+    green:   '0x98971a'
+    yellow:  '0xd79921'
+    blue:    '0x458588'
+    magenta: '0xb16286'
+    cyan:    '0x689d6a'
+    white:   '0xa89984'
 
   # Bright colors
   bright:
-    black:   '0x7d7a68'
-    red:     '0xd73737'
-    green:   '0x60ac39'
-    yellow:  '0xae9513'
-    blue:    '0x6684e1'
-    magenta: '0xb854d4'
-    cyan:    '0x1fad83'
-    white:   '0xa6a28c'
+    black:   '0x928374'
+    red:     '0xfb4934'
+    green:   '0xb8bb26'
+    yellow:  '0xfabd2f'
+    blue:    '0x83a598'
+    magenta: '0xd3869b'
+    cyan:    '0x8ec07c'
+    white:   '0xebdbb2'
+
+# # Base16 Atelier Dune 256 - alacritty color config
+# # Bram de Haan (http://atelierbramdehaan.nl)
+# colors:
+#   # Default colors
+#   primary:
+#     background: '0x20201d'
+#     foreground: '0xa6a28c'
+
+#   # Colors the cursor will use if `custom_cursor_colors` is true
+#   cursor:
+#     text: '0x20201d'
+#     cursor: '0xa6a28c'
+
+#   # Normal colors
+#   normal:
+#     black:   '0x20201d'
+#     red:     '0xd73737'
+#     green:   '0x60ac39'
+#     yellow:  '0xae9513'
+#     blue:    '0x6684e1'
+#     magenta: '0xb854d4'
+#     cyan:    '0x1fad83'
+#     white:   '0xa6a28c'
+
+#   # Bright colors
+#   bright:
+#     black:   '0x7d7a68'
+#     red:     '0xd73737'
+#     green:   '0x60ac39'
+#     yellow:  '0xae9513'
+#     blue:    '0x6684e1'
+#     magenta: '0xb854d4'
+#     cyan:    '0x1fad83'
+#     white:   '0xa6a28c'
 
 ## Visual Bell
 #
