--- a/tmux.conf
+++ b/tmux.conf
@@ -4,6 +4,7 @@ set-option -g default-shell /bin/zsh
 #set -g default-terminal "screen-256color"
 set -g pane-base-index 1
 set -g escape-time 10
+set-option -g history-limit 10000
 
 set -as terminal-overrides ',xterm*:sitm=\E[3m'
 set -g terminal-overrides ',xterm-256color:Tc' # THIS LINE FIXES ISSUES WITH VIM COLORSCHEMES
