--- a/i3/config
+++ b/i3/config
@@ -17,7 +17,7 @@ set $mod Mod4
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
-#font pango:DejaVu Sans Mono 8
+font pango:DejaVu Sans Mono 8
 
 # Before i3 v4.8, we used to recommend this one as the default:
 # font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
@@ -30,7 +30,7 @@ set $mod Mod4
 floating_modifier $mod
 
 for_window [class="^.*"] border pixel 1
-focus_follows_mouse = no
+focus_follows_mouse no
 client.focused              #353439 #34be5b #7B9F35
 
 
@@ -175,3 +175,4 @@ exec "xinput set-prop 14 301 1"
 exec "xinput set-prop 14 302 1"
 exec ssh-add ~/.ssh/id_rsa
 exec --no-startup-id xautolock -time 4 -locker "betterlockscreen -l"
+exec xautolock -time 15 -locker 'betterlockscreen -l' &
