--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,6 @@
 set -g mouse on
 
-set-option -g default-shell /bin/zsh
+set-option -g default-shell /bin/fish
 #set -g default-terminal "screen-256color"
 set -g pane-base-index 1
 set -g escape-time 10
@@ -14,6 +14,7 @@ set -g terminal-overrides ',xterm-256color:Tc' # THIS LINE FIXES ISSUES WITH VIM
 # enable true color support and italics
 #set -g default-terminal "xterm-256color-italic"
 set -g default-terminal "xterm-256color"
+# set -g default-terminal "konsole-256color"
 #set -ga terminal-overrides ",xterm-256color-italic:Tc"
 
 # Use Alt-arrow keys without prefix key to switch panes
