--- a/tmux.conf
+++ b/tmux.conf
@@ -1,21 +1,15 @@
 set -g mouse on
 
-set-option -g default-shell /bin/fish
-#set -g default-terminal "screen-256color"
+set-option -g default-shell /usr/bin/fish
 set -g pane-base-index 1
 set -g escape-time 10
 set-option -g history-limit 10000
 
 set -as terminal-overrides ',xterm*:sitm=\E[3m'
-set -g terminal-overrides ',xterm-256color:Tc' # THIS LINE FIXES ISSUES WITH VIM COLORSCHEMES
-# set -g default-terminal "screen-256color"
-
+set -g terminal-overrides ',xterm-256color:Tc'
 
 # enable true color support and italics
-#set -g default-terminal "xterm-256color-italic"
 set -g default-terminal "xterm-256color"
-# set -g default-terminal "konsole-256color"
-#set -ga terminal-overrides ",xterm-256color-italic:Tc"
 
 # Use Alt-arrow keys without prefix key to switch panes
 bind -n M-h select-pane -L
@@ -46,20 +40,6 @@ bind l resize-pane -R 30
 bind k resize-pane -U 15
 bind j resize-pane -D 15
 
-
 # Repeat last command in pane 2
 bind r send-keys -t 2 C-c Up Enter
 bind e send-keys -t 2 Up Enter
-
-# is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-#     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-# bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
-# bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
-# bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
-# bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
-# bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
-# bind-key -T copy-mode-vi C-h select-pane -L
-# bind-key -T copy-mode-vi C-j select-pane -D
-# bind-key -T copy-mode-vi C-k select-pane -U
-# bind-key -T copy-mode-vi C-l select-pane -R
-# bind-key -T copy-mode-vi C-\ select-pane -l
