--- a/tmux.conf
+++ b/tmux.conf
@@ -1,4 +1,5 @@
 set -g mouse on
+set -g set-clipboard off
 
 set-option -g default-shell /usr/bin/fish
 set -g pane-base-index 1
@@ -43,3 +44,7 @@ bind j resize-pane -D 15
 # Repeat last command in pane 2
 bind r send-keys -t 2 C-c Up Enter
 bind e send-keys -t 2 Up Enter
+
+bind S choose-window 'join-pane -v -s "%%"'
+bind V choose-window 'join-pane -h -s "%%"'
+
