--- a/tmux.conf
+++ b/tmux.conf
@@ -8,6 +8,7 @@ set-option -g history-limit 10000
 
 set -as terminal-overrides ',xterm*:sitm=\E[3m'
 set -g terminal-overrides ',xterm-256color:Tc'
+setw -g mode-keys vi
 
 # enable true color support and italics
 set -g default-terminal "xterm-256color"
