--- a/tmux.conf
+++ b/tmux.conf
@@ -49,3 +49,20 @@ bind e send-keys -t 2 Up Enter
 bind S choose-window 'join-pane -v -s "%%"'
 bind V choose-window 'join-pane -h -s "%%"'
 
+# status bar theme
+set -g status-bg 'colour235'
+set -g status-right-length '100'
+set -g status-justify 'left'
+set -g status-left-length '100'
+set -g status 'on'
+setw -g window-status-separator ''
+set -g status-left '#[fg=colour232,bg=colour154] #S #[fg=colour154,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour154,bg=colour238] #(whoami) |'
+set -g status-right '#[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour222,bg=colour238] #H #[fg=colour154,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour232,bg=colour154] #{battery_status_bg} Battery: #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M  '
+setw -g window-status-format '#[fg=colour233,bg=colour238] #I  #W #[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]'
+setw -g window-status-current-format '#[fg=colour222,bg=colour238] #I  #W  #F #[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]'
+
+# plugins
+set -g @plugin 'tmux-plugins/tmux-battery'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run -b '~/.tmux/plugins/tpm/tpm'
