--- a/tmux.conf
+++ b/tmux.conf
@@ -1,17 +1,21 @@
 set -g mouse on
 set -g set-clipboard off
 
-set-option -g default-shell /usr/bin/fish
+set-option -g default-shell /usr/local/bin/fish
 set -g pane-base-index 1
 set -g escape-time 10
+setw -g mode-keys vi
 set-option -g history-limit 10000
 
-set -as terminal-overrides ',xterm*:sitm=\E[3m'
-set -g terminal-overrides ',xterm-256color:Tc'
-setw -g mode-keys vi
+set-option -g default-terminal "screen-256color"
+set-option -ga terminal-overrides ",alacritty:Tc,*256col*:Tc"
+
+# set-option -sa terminal-overrides ',alacritty:RGB'
+# set -ga terminal-overrides ",xterm-256color:Tc"
+
 
 # enable true color support and italics
-set -g default-terminal "xterm-256color"
+# set-option -g default-terminal "xterm-256color"
 
 # Use Alt-arrow keys without prefix key to switch panes
 bind -n M-h select-pane -L
@@ -19,8 +23,8 @@ bind -n M-l select-pane -R
 bind -n M-k select-pane -U
 bind -n M-j select-pane -D
 
-bind '"' split-window -v -c '#{pane_current_path}'
-bind '%' split-window -h -c '#{pane_current_path}'
+bind '"' split-window -v -p 30 -c '#{pane_current_path}'
+bind '%' split-window -h -p 30 -c '#{pane_current_path}'
 
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
@@ -49,20 +53,8 @@ bind e send-keys -t 2 Up Enter
 bind S choose-window 'join-pane -v -s "%%"'
 bind V choose-window 'join-pane -h -s "%%"'
 
-# status bar theme
-set -g status-bg 'colour235'
-set -g status-right-length '100'
-set -g status-justify 'left'
-set -g status-left-length '100'
-set -g status 'on'
-setw -g window-status-separator ''
-set -g status-left '#[fg=colour232,bg=colour154] #S #[fg=colour154,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour154,bg=colour238] #(whoami) |'
-set -g status-right '#[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour222,bg=colour238] #H #[fg=colour154,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour232,bg=colour154] #{battery_status_bg} Battery: #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M  '
-setw -g window-status-format '#[fg=colour233,bg=colour238] #I  #W #[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]'
-setw -g window-status-current-format '#[fg=colour222,bg=colour238] #I  #W  #F #[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]'
-
-# plugins
-set -g @plugin 'tmux-plugins/tmux-battery'
+# set -g @plugin 'tmux-plugins/tmux-battery'
+# set -g @plugin 'egel/tmux-gruvbox'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run -b '~/.tmux/plugins/tpm/tpm'
+# run -b '~/.tmux/plugins/tpm/tpm'
