--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,7 @@
 set -g mouse on
 set -g set-clipboard off
 
-set-option -g default-shell /usr/local/bin/fish
+set-option -g default-shell /usr/bin/fish
 set -g pane-base-index 1
 set -g escape-time 10
 setw -g mode-keys vi
@@ -23,8 +23,8 @@ bind -n M-l select-pane -R
 bind -n M-k select-pane -U
 bind -n M-j select-pane -D
 
-bind '"' split-window -v -p 30 -c '#{pane_current_path}'
-bind '%' split-window -h -p 30 -c '#{pane_current_path}'
+bind '"' split-window -v -p 35 -c '#{pane_current_path}'
+bind '%' split-window -h -p 35 -c '#{pane_current_path}'
 
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
