--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,7 @@
 set -g mouse on
 set -g set-clipboard off
 
+set-option -g focus-events on
 set-option -g default-shell /usr/bin/fish
 set -g pane-base-index 1
 set -g escape-time 10
