--- a/tmux.conf
+++ b/tmux.conf
@@ -4,11 +4,12 @@ set -g set-clipboard off
 set-option -g focus-events on
 set-option -g default-shell /usr/local/bin/fish
 set -g pane-base-index 1
-set -g escape-time 10
+set -g escape-time 0
 setw -g mode-keys vi
 set-option -g history-limit 10000
 
-set-option -g default-terminal "screen-256color"
+set-option -g default-terminal "xterm-256color"
+# set-option -g default-terminal "screen-256color"
 set-option -ga terminal-overrides ",alacritty:Tc,*256col*:Tc"
 
 # set-option -sa terminal-overrides ',alacritty:RGB'
@@ -54,8 +55,10 @@ bind e send-keys -t 2 Up Enter
 bind S choose-window 'join-pane -v -s "%%"'
 bind V choose-window 'join-pane -h -s "%%"'
 
+set -g @plugin 'tmux-plugins/tmux-yank'
+
 # set -g @plugin 'tmux-plugins/tmux-battery'
 # set -g @plugin 'egel/tmux-gruvbox'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-# run -b '~/.tmux/plugins/tpm/tpm'
+run -b '~/.tmux/plugins/tpm/tpm'
