replace nerdtree with nvim-tree.lua and add null-ls

--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -110,7 +110,7 @@
 # Font configuration
 font:
   normal:
-    family: Source Code Pro
+    family: FiraCode Nerd Font Mono
 #font:
   # Normal (roman) font face
   #normal:
