--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -110,7 +110,8 @@
 # Font configuration
 font:
   normal:
-    family: FiraCode Nerd Font Mono
+    # family: Source Code Pro
+    family: Blex Mono Nerd Font
 #font:
   # Normal (roman) font face
   #normal:
@@ -159,7 +160,7 @@ font:
     #style: Bold Italic
 
   # Point size
-  size: 11.0
+  size: 8.5
 
   # Offset is the extra space around each character. `offset.y` can be thought
   # of as modifying the line spacing, and `offset.x` as modifying the letter
